# SeleniumTwitterGoogle

./: .env-example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
proxy_config/: background_js.txt
testlib/: common.py  exceptions.py
tests/: conftest.py  test_google.py  test_twitter.py
